<resources>
    <string name="action_firewall_setting">Blocklist</string>
    <string name="action_get_otp">Get code</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="activity_not_found">No app was found to handle this action</string>
    <string name="activity_not_found_uri">No app was found to handle this action</string>
    <string name="addBlackList">Block</string>
    <string name="add_attachment">Add attachments</string>
    <string name="add_contact">vCard</string>
    <string name="add_miui_contact">Contact</string>
    <string name="add_music">Add music</string>
    <string name="add_number_to_sender">Add number to %s</string>
    <string name="add_picture">Add picture</string>
    <string name="add_private_contact">Add private contact</string>
    <string name="add_slide">Add slide (after)</string>
    <string name="add_slide_before">Add intro slide</string>
    <string name="add_slide_hint">Tap to create new slide</string>
    <string name="add_smiley">Emoticon</string>
    <string name="add_timing">Timed</string>
    <string name="add_to_browser_favorite_failed">"Couldn't add"</string>
    <string name="add_to_browser_favorite_success">Added successfully</string>
    <string name="add_video">Add video</string>
    <string name="adding_attachments">Wait while the items are added to the slideshow.</string>
    <string name="adding_attachments_title">Adding attachments</string>
    <string name="adding_recipients">Adding recipients…</string>
    <string name="alert_dlg_cancel_button">Cancel</string>
    <string name="alert_dlg_ok_button">OK</string>
    <string name="allow_network_hint">Turn on \"Update info automatically\" or check your network connection</string>
    <string name="already_updated">Up to date</string>
    <string name="app_label">Messaging</string>
    <string name="app_name">Devices</string>
    <string name="application_list_title">Mini apps</string>
    <string name="area_code_hot">Popular</string>
    <string name="area_code_title">Select country code</string>
    <string name="attach_group_chat">Group chat</string>
    <string name="attach_image">Pictures</string>
    <string name="attach_rcs_file">File</string>
    <string name="attach_rcs_location">Location</string>
    <string name="attach_record_sound">Record audio</string>
    <string name="attach_record_video">Capture video</string>
    <string name="attach_slideshow">Slideshow</string>
    <string name="attach_sound">Audio</string>
    <string name="attach_subject">Subject</string>
    <string name="attach_take_photo">Take photo</string>
    <string name="attach_transaction">Transfer money</string>
    <string name="attach_video">Video</string>
    <string name="attach_video_call">Video call</string>
    <string name="audio_download_failed">"Couldn't download audio"</string>
    <string name="audio_message_expired">This voice message has expired.</string>
    <string name="complain_message_title">Report</string>
    <string name="copy_message_text">Copy</string>
    <string name="copy_to_sdcard">Save attachment</string>
    <string name="delete_message">Delete</string>
    <string name="found_wild_messages_title">Sync messages from Xiaomi Cloud</string>
    <string name="group_verification_codes_summary">Automatically group one-time passwords together</string>
    <string name="group_verification_codes_title">Group one-time passwords</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_lock">Add to favorites</string>
    <string name="menu_traffic_destination">Destination</string>
    <string name="menu_unlock">Remove from favorites</string>
    <string name="mx_auto_resend_mms">Send as MMS</string>
    <string name="mx_auto_resend_mms_summary">"Send multimedia messages as MMS over mobile data connection when you're not connected to Wi-Fi. You will incur regular charges from your carrier."</string>
    <string name="mx_auto_resend_sms">Send as SMS</string>
    <string name="mx_auto_resend_sms_summary">"Send messages as SMS over mobile data connection when you're not connected to Wi-Fi. You will incur regular charges from your carrier."</string>
    <string name="mx_current_status">Settings</string>
    <string name="mx_dspt_listview">Send messages to other MIUI devices without incurring charges</string>
    <string name="mx_dspt_provision_ex2">Privacy Policy</string>
    <string name="mx_enable">Mi Message</string>
    <string name="mx_filter_message_from_stranger">Block Mi Messages from unknown numbers</string>
    <string name="mx_filter_message_from_stranger_summary">"You'll still be able to receive regular SMS from unknown numbers"</string>
    <string name="mx_msg">Mi Message</string>
    <string name="mx_on_sim_1">Mi Message SIM slot 1</string>
    <string name="mx_on_sim_2">Mi Message SIM slot 2</string>
    <string name="play">Play</string>
    <string name="pref_advanced_settings_title">Additional settings</string>
    <string name="pref_allow_network_access_summary">Get the latest info on delivery and other services</string>
    <string name="pref_cell_broadcast">Emergency alerts</string>
    <string name="pref_collapse_sp_messages_summary">Automatically group SMS notifications together</string>
    <string name="pref_delivery_ringtone">Delivery sound</string>
    <string name="pref_hide_verification_code_summary">Automatically hide one-time passwords in message notifications on secured Lock screen</string>
    <string name="pref_msg_trash_bin_title">Deleted messages</string>
    <string name="pref_notification_settings_title">Notifications</string>
    <string name="pref_other_title">Additional settings</string>
    <string name="pref_show_blocked_messages_summary">Show blocked SMS in conversations list</string>
    <string name="pref_show_list_avatar_summary">Show profile photos and contact info in list view</string>
    <string name="pref_show_photo_word_summary">Automatically assign a picture to contacts without one</string>
    <string name="pref_show_sms_template_entry_summary">Detect one-time passwords and show quick menus</string>
    <string name="pref_show_sms_template_summary">Turn on to use the smart features of Mi Message, such as copying codes, checking balance, etc.</string>
    <string name="pref_sms_storage_title">Storage</string>
    <string name="pref_sms_theme_title">Display</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_summary_delivery_reports">Show delivery status for sent messages</string>
    <string name="pref_summary_delivery_ringtone">Receive sound notifications for delivered messages.</string>
    <string name="pref_summary_notification_body_enabled">Show messages on the Lock screen and in the Notification shade</string>
    <string name="pref_summary_send_delivery_reports">Send delivery confirmation message to sender when you receive a multimedia message</string>
    <string name="pref_switch_sdk_setting">Switch smart SMS service provider</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_delivery_reports">Delivery status</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_msg_blocked">Blocklist</string>
    <string name="pref_title_notification_body_enabled">Show messages on Lock screen</string>
    <string name="pref_title_send_delivery_reports">Send delivery messages</string>
    <string name="pref_title_smart_msg_privacy_policy">Smart Messaging Privacy Policy</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="private_message">Private messaging</string>
    <string name="private_new_notification">Message notifications</string>
    <string name="prompt_area_code">+86</string>
    <string name="prompt_otp">Code</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_summary">RCS allows you to exchange messages, photos, videos, and create group chats for free.</string>
    <string name="prompt_title">Sign in to RCS</string>
    <string name="prompt_user_agreement">By signing in, you agree to the RCS User Agreement and Privacy Policy.</string>
    <string name="rcs_auto_resend_mms">Convert to MMS</string>
    <string name="rcs_auto_resend_sms">Convert to SMS</string>
    <string name="rcs_auto_resume">Resume interrupted uploads automatically</string>
    <string name="rcs_auto_resume_only_by_wifi">Resume uploads only when connected to Wi-Fi</string>
    <string name="rcs_dspt">Send and recieve messages using Wi-Fi or China Mobile network</string>
    <string name="rcs_msg">China Mobile Messaging</string>
    <string name="rcs_pref_category_rcs">RCS messaging</string>
    <string name="rcs_pref_category_rcs_message">RCS messaging</string>
    <string name="rcs_pref_category_set_alias">Show alias to the other person when using RCS</string>
    <string name="rcs_pref_cfs">Alternative message transfer</string>
    <string name="rcs_pref_default_sending_method">Default sending method</string>
    <string name="rcs_pref_ft_auto_download">Download files automatically</string>
    <string name="rcs_pref_ft_auto_download_details">Download small files automatically</string>
    <string name="rcs_pref_ft_auto_download_roaming">Download small files automatically when roaming</string>
    <string name="rcs_pref_ft_cfs">Alternative file transfer</string>
    <string name="rcs_pref_login_rcs">RCS messaging</string>
    <string name="rcs_pref_picture_message_default_quality">Image compressing options</string>
    <string name="rcs_pref_send_display_report">Show delivery reports to the sender</string>
    <string name="rcs_pref_send_display_report_detail">Senders will be notified when their messages are read</string>
    <string name="rcs_pref_setting_entrance">RCS messaging settings</string>
    <string name="rcs_pref_user_alias_title">Alias</string>
    <string name="rcs_pref_video_message_default_quality">Video compressing options</string>
    <string name="rcs_service_agreement">Service Agreement</string>
    <string name="rcs_setting">China Mobile Messaging settings</string>
    <string name="rcs_silence_message">Silence message notifications</string>
    <string name="rcs_summary_auto_resend_mms">"Convert China Mobile multimedia messages to MMS after the original message couldn't be sent. Your carrier will charge you for this message."</string>
    <string name="rcs_summary_auto_resend_sms">"Convert China Mobile text messages to SMS after the original message couldn't be sent. Your carrier will charge you for this message."</string>
    <string name="rcs_summary_silence_message">Silence message notifications when desktop client is working</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="save_to_sim">Save to SIM card</string>
    <string name="select_copy_text">Select and copy text</string>
    <string name="show_delivery_status">Show delivery status</string>
    <string name="title_allow_network_access">Update info automatically</string>
    <string name="title_collapse_sp_messages">Notifications group</string>
    <string name="title_hide_verification_code">Auto hide OTP on Lock screen</string>
    <string name="title_show_blocked_messages">Show blocked SMS</string>
    <string name="title_show_list_avatar">Show profile photos</string>
    <string name="title_show_photo_word">Assign contact photos</string>
    <string name="title_show_sms_template">Smart Messaging</string>
    <string name="title_use_gsm_alphabet">Use GSM alphabet</string>
    <string name="view_message_details">View details</string>
</resources>