<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/mx_current_status" android:key="pref_key_mx_current_status">
        <CheckBoxPreference android:title="@string/mx_auto_resend_sms" android:key="pref_key_mx_auto_resend_sms" android:summary="@string/mx_auto_resend_sms_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/mx_auto_resend_mms" android:key="pref_key_mx_auto_resend_mms" android:summary="@string/mx_auto_resend_mms_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/mx_filter_message_from_stranger" android:key="pref_key_mx_filter_message_from_stranger" android:summary="@string/mx_filter_message_from_stranger_summary" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="false" android:title="@string/private_new_notification" android:key="pref_key_private_new_notification" android:summary="@string/private_message" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>