<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar android:id="@id/login_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_marginBottom="8.0dip" style="?android:progressBarStyleLarge" />
    <ScrollView android:id="@id/login_form" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/phone_login_form" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/rcs_login_title_text_size" android:textStyle="bold" android:layout_gravity="center_horizontal" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/rcs_login_title_margin_top" android:text="@string/prompt_title" />
            <TextView android:textSize="@dimen/rcs_login_subtitle_text_size" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/rcs_login_subtitle_margin_top" android:text="@string/prompt_summary" android:layout_marginStart="@dimen/rcs_login_subtitle_margin_h" android:layout_marginEnd="@dimen/rcs_login_subtitle_margin_h" />
            <LinearLayout android:orientation="horizontal" android:background="@drawable/rcs_login_input_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:divider="@drawable/vertical_divider" android:showDividers="middle">
                <Button android:textSize="@dimen/rcs_login_input_text_size" android:id="@id/area_code" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/rcs_login_input_padding_v" android:layout_marginBottom="@dimen/rcs_login_input_padding_v" android:text="@string/prompt_area_code" android:layout_marginStart="@dimen/rcs_login_input_padding_h" android:layout_marginEnd="@dimen/rcs_login_input_padding_h" />
                <AutoCompleteTextView android:textSize="@dimen/rcs_login_input_text_size" android:id="@id/phone" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/rcs_login_input_padding_v" android:layout_marginBottom="@dimen/rcs_login_input_padding_v" android:hint="@string/prompt_phone" android:maxLines="1" android:singleLine="true" android:inputType="textEmailAddress" android:layout_marginStart="@dimen/rcs_login_input_padding_h" android:layout_marginEnd="@dimen/rcs_login_input_padding_h" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/rcs_login_input_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.299988dip" android:weightSum="1.0">
                <EditText android:textSize="@dimen/rcs_login_input_text_size" android:id="@id/otp" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_otp" android:maxLines="1" android:singleLine="true" android:layout_weight="1.0" android:inputType="textCapWords" android:imeOptions="actionUnspecified|normal" android:imeActionLabel="@string/action_sign_in_short" android:imeActionId="6" android:layout_toStartOf="@id/get_otp" />
                <Button android:textSize="@dimen/rcs_login_input_text_size" android:textStyle="bold" android:textColor="@color/rcs_login_get_otp_text_color" android:id="@id/get_otp" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_get_otp" android:layout_marginStart="4.0dip" android:layout_alignParentEnd="true" />
            </LinearLayout>
            <Button android:textSize="12.699982sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/sign_in_button" android:background="@drawable/button_bg_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="76.29999dip" android:text="@string/action_sign_in" style="?android:textAppearanceSmall" />
            <TextView android:gravity="center_horizontal" android:id="@id/user_agreement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.299988dip" android:text="@string/prompt_user_agreement" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>