<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.FloatPanelView android:orientation="vertical" android:paddingBottom="@dimen/floatpanel_padding_v" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/floatpanel_padding_h"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:id="@id/panel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="ltr">
        <TextView android:id="@id/view_video_button" android:background="@drawable/floatpanel_left_button_bg" android:text="@string/play" android:layoutDirection="locale" style="@style/FloatPanelButton" />
        <TextView android:id="@id/replace_video_button" android:background="@drawable/floatpanel_middle_button_bg" android:text="@string/replace" android:layoutDirection="locale" style="@style/FloatPanelButton" />
        <TextView android:id="@id/remove_video_button" android:background="@drawable/floatpanel_right_button_bg" android:text="@string/remove" android:layoutDirection="locale" style="@style/FloatPanelButton" />
    </LinearLayout>
    <ImageView android:id="@id/arrow_down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/floatpanel_down_arrow" android:contentDescription="@null" />
</com.android.mms.ui.FloatPanelView>